# FCW_LAB

./: .gitignore  CMakeLists.txt  G.txt  Grammar.cpp  Grammar.h  GrammarBasics.cpp  GrammarBasics.h  GrammarBuilder.cpp  GrammarBuilder.h  Language.cpp  Language.h  Main.cpp  ObjectCounter.h  SequenceStuff.cpp  SequenceStuff.h  SignalHandling.cpp  SignalHandling.h  SymbolStuff.cpp  SymbolStuff.h  Timer.cpp  Timer.h  Vocabulary.cpp  Vocabulary.h
